Fixes mozilla/thimble.mozilla.org #2505 - Unneeded gap where project size is displayed (#880)

--- a/src/extensions/default/bramble/stylesheets/sidebarTheme.less
+++ b/src/extensions/default/bramble/stylesheets/sidebarTheme.less
@@ -37,11 +37,10 @@ div.working-set-option-btn[style] {
 // Indicates used and available room in a project
 #project-size-info {
     padding: 12px 10px 24px;
-    transition: opacity .2s ease-out;
     overflow: hidden;
 
     &.hidden {
-        opacity: 0;
+        display: none;
     }
 
     .space-available {
